<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.a7bowersfridge.FridgeItemPagerActivity$PlaceholderFragment" >
    
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.a7bowersfridge.FridgeItemPagerActivity$PlaceholderFragment" >

    <TextView 
        android:id="@+id/textview_fridge_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fridge_item_name"
        style="@style/h1" />
    
    <EditText
        android:id="@+id/edittext_fridge_item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_fridge_item_name_hint" />
	
    <TextView 
        android:id="@+id/textview_fridge_item_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fridge_item_desc"
        style="@style/h2" />
    
    <EditText
        android:id="@+id/edittext_fridge_item_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_fridge_item_desc_hint" />
	
    <TextView 
        android:id="@+id/textview_fridge_item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fridge_item_date"
        style="@style/h2" />
    
    <EditText
        android:id="@+id/edittext_fridge_item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/edittext_fridge_item_date_hint" />

    <ImageView 
        android:id="@+id/imageview_fridge_item_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/picture_desc"
        />
    
    <Button
        android:id="@+id/button_show_camera"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_show_camera" />
</LinearLayout>
</ScrollView>
